# model-serve

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_image.json
app/: config.py
app/api/: __init__.py  main.py
app/api/routes/: __init__.py  chat.py  models.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  image_handler.py  message_processor.py  response_generator.py
app/schemas/: __init__.py  chat_models.py  error_models.py  model_models.py
app/services/: __init__.py  chat_service.py  model_manager.py  request_validator.py
app/utils/: app_state.py
tests/: conftest.py
tests/integration/: test_auth_integration.py  test_chat_endpoints.py  test_error_scenarios.py  test_models_endpoints.py
tests/unit/: test_auth_middleware.py  test_chat_models.py  test_chat_service.py  test_error_models.py  test_image_handler.py  test_main_app.py  test_message_processor.py  test_model_manager.py  test_model_models.py  test_request_validator.py  test_response_generator.py
